syntax = "proto3";

package api.utility;

option go_package = "api/internal/proto/utility;utilityservice";

message RPMDataEntry {
  string month = 1;
  map<string, int32> values = 2; 
}

service UtilityService {
  rpc AggregateChartData (AggregateChartDataRequest) returns (AggregateChartDataResponse){
    option idempotency_level = NO_SIDE_EFFECTS;
  };
}

message AggregateChartDataRequest {}
message AggregateChartDataResponse {
  repeated RPMDataEntry data = 1;
}
